# gateway-api

./: .gitignore  CMakeLists.txt
inc/: GatewayAPI.h
src/: GatewayAPI.cpp
